// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBtnToggle.vue should allow deselecting a value when mandatory prop is used with multiple prop 1`] = `

<div class="v-btn-toggle v-btn-toggle--selected">
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--active v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--active v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should allow new value when mandatory prop is used 1`] = `

<div class="v-btn-toggle v-btn-toggle--selected">
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--active v-btn--flat"
          data-only-child="true"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should allow new value when mandatory prop is used with multiple prop 1`] = `

<div class="v-btn-toggle v-btn-toggle--selected">
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--active v-btn--flat"
          data-only-child="true"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should not allow empty value when mandatory prop is used 1`] = `

<div class="v-btn-toggle v-btn-toggle--selected">
  <button type="button"
          class="v-btn v-btn--active v-btn--flat"
          data-only-child="true"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should not allow empty value when mandatory prop is used with multiple prop 1`] = `

<div class="v-btn-toggle v-btn-toggle--selected">
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--active v-btn--flat"
          data-only-child="true"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should toggle values of any type 1`] = `

<div class="v-btn-toggle">
  <button type="button"
          value="true"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="6"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="foo"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="{&quot;key&quot;:&quot;value&quot;}"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="[&quot;arrayyy&quot;]"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;

exports[`VBtnToggle.vue should use button value attribute if available 1`] = `

<div class="v-btn-toggle v-btn-toggle--selected">
  <button type="button"
          value="left"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="center"
          class="v-btn v-btn--active v-btn--flat"
          data-only-child="true"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
  <button type="button"
          value="right"
          class="v-btn v-btn--flat"
  >
    <div class="v-btn__content">
      <i aria-hidden="true"
         class="v-icon material-icons"
      >
        add
      </i>
    </div>
  </button>
</div>

`;
